# Final-Year-Fitness-Mobile-Project-Flutter-

./: .flutter-plugins-dependencies  pubspec.yaml  pyvenv.cfg
android/: local.properties
android/app/: google-services.json
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/res/values/: firebase_options.xml
backend/: app.db  auth_utils.py  data.py  mail_service.py  mongo_test.py  pyproject.toml  schemas.py
backend/fitness_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lib/: debug_check_prefs.dart  firebase_options.dart  main.dart  theme_manager.dart
lib/data/: recommended_meals.dart  workout_data.dart
lib/models/: meal.dart  meal_plan_manager.dart  workout_video.dart
lib/screens/: add_custom_meal_sheet.dart  cardio_progress_screen.dart  daily_meal_plan_screen.dart  edit_profile_screen.dart  favorites_screen.dart  greeting_onboarding_screen.dart  greeting_screen.dart  home_main_page.dart  login_screen.dart  main_tabs.dart  meal_detail_screen.dart  meal_plan_screen.dart  notification_screen.dart  profile_screen.dart  progress_screen.dart  recommended_workout_page.dart  signup_screen.dart  supplements_page.dart  update_weight_screen.dart  video_player_screen.dart  workout_list_screen.dart
lib/services/: api_service.dart  progress_service.dart
lib/theme/: app_theme.dart
lib/widgets/: safe_meal_image.dart
test/: widget_test.dart
